# fluxbalancer-core

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
src/: logging_config.py  main.py
src/config/: settings.py
src/core/application/ports/: strategy_provider.py
src/modules/decision/application/: decision_policy_resolver.py  default_decision_policy_resolver.py
src/modules/decision/domain/: normalization.py  weights_strategy.py
src/modules/mcdm/algorithms/: saw.py  (+2 more)
tests/: test_entropy.py
tests/e2e/: test_choose_node.py
tests/integration/routing/: test_choose_node.py  test_choose_node_no_metrics.py  test_choose_node_profile_fallback.py
tests/mcdm/: test_airm.py  test_topsis.py
tests/unit/decision/: test_default_decision_resolver.py  test_entropy.py  test_normalization.py  test_strategy_registries.py
tests/unit/experiment/: test_http_client.py
tests/unit/gateway/: test_brs_parser.py  test_proxy_request_use_case.py
tests/unit/observability/: test_inflight_tracker.py  test_memory_repository.py  test_metrics_snapshot_builder.py  test_request_profile.py
tests/unit/replication/: test_adaptive_selector.py  test_completion_policies.py  test_fixed_and_hedged_services.py  test_replication_manager.py  test_replication_planner.py  test_replication_policy.py  test_universal_wa.py
uml/: component.plantuml  main.puml  mcdm.plantuml  observability.plantuml  pipeline.plantuml  pipeline_easy.md  pipeline_hard.md  replication.plantuml
uml/flow/: pipeline.puml
uml/modules/: components.puml  mcdm.puml  observability.puml  replication.puml
(+157 files in other folders)
