[project]
name = "university-research-project"
version = "0.1.0"
description = ""
authors = [
    {name = "domster704",email = "domster704@mail.ru"}
]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12"
aiodocker = ">=0.25.0,<0.26.0"
fastapi = ">=0.128.0,<0.129.0"
numpy = ">=2.4.1,<3.0.0"
python-dotenv = ">=1.2.1,<2.0.0"
pydantic-settings = ">=2.12.0,<3.0.0"
uvicorn = ">=0.40.0,<0.41.0"
redis = ">=7.1.0,<8.0.0"
fluxbalancer-contracts = {path = "../fluxbalancer-contracts"}

[tool.poetry]
packages = [{ include = "src" }]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "black (>=25.1.0,<26.0.0)"
]

[tool.black]
line-length = 88
